--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 23:05:03 2018</p>
+         Last Run: Sun Oct 28 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -46,19 +46,19 @@
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>58</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>77</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
+                        <td>6</td>
+                        <td>3</td>
                         <td>2</td>
-                        <td>2</td>
-                        <td>56</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
@@ -108,7 +108,7 @@
                "data":[
                  "-2",
                  "1",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -119,7 +119,7 @@
                "data":[
                  "2",
                  "4",
-                 "5"
+                 "6"
                ]
              }
            ]
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "58",
-                 "56"
+                 "68",
+                 "55",
+                 "54"
                ]
              },
              {
@@ -191,7 +191,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "87",
-                 "77",
+                 "76",
                  "64"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 23:05:03 2018</p>
+         Last Run: Sun Oct 28 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -230,15 +230,15 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
                         <td>-1</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>77</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -246,11 +246,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>4</td>
-                        <td>68</td>
-                        <td>1</td>
+                        <td>69</td>
+                        <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>73</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -258,11 +258,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>60</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>70</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -380,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "68",
-                 "60"
+                 "77",
+                 "69",
+                 "62"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
-                 "73",
-                 "70"
+                 "84",
+                 "79",
+                 "76"
                ]
              }
            ]
