--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 01:05:20 2018</p>
+         Last Run: Sun Oct 28 02:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -32,37 +32,37 @@
                         <td>10:00 AM</td>
                         <td>Overcast</td>
                         <td>2</td>
-                        <td>-2</td>
-                        <td>3</td>
-                        <td>71</td>
+                        <td>-1</td>
+                        <td>5</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>86</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>58</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>76</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>6</td>
-                        <td>3</td>
+                        <td>5</td>
                         <td>2</td>
-                        <td>55</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>56</td>
+                        <td>1</td>
+                        <td>16</td>
                         <td>SSE</td>
-                        <td>64</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -106,9 +106,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "1",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -119,7 +119,7 @@
                "data":[
                  "2",
                  "4",
-                 "6"
+                 "5"
                ]
              }
            ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "5",
                  "2",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "58",
-                 "55"
+                 "70",
+                 "62",
+                 "56"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "76",
-                 "64"
+                 "93",
+                 "82",
+                 "68"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 01:05:20 2018</p>
+         Last Run: Sun Oct 28 02:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -231,38 +231,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-1</td>
-                        <td>5</td>
-                        <td>77</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>W</td>
-                        <td>83</td>
+                        <td>-3</td>
+                        <td>10</td>
+                        <td>82</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>3</td>
+                        <td>Overcast</td>
+                        <td>2</td>
+                        <td>-1</td>
+                        <td>9</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>4</td>
-                        <td>69</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>79</td>
+                        <td>11</td>
+                        <td>WNW</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>Overcast</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>8</td>
-                        <td>62</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>76</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,9 +306,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "-3",
                  "-1",
-                 "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -317,9 +317,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
-                 "3",
-                 "4"
+                 "0",
+                 "2",
+                 "3"
                ]
              }
            ]
@@ -370,8 +370,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "4",
+                 "10",
+                 "9",
                  "8"
                ]
              },
@@ -380,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "69",
-                 "62"
+                 "82",
+                 "74",
+                 "67"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "79",
-                 "76"
+                 "90",
+                 "87",
+                 "85"
                ]
              }
            ]
