--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 03:05:04 2018</p>
+         Last Run: Sun Oct 28 04:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>6</td>
-                        <td>69</td>
+                        <td>16</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>1</td>
-                        <td>61</td>
+                        <td>17</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>82</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>14</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>67</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "1",
-                 "1"
+                 "16",
+                 "17",
+                 "14"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "61",
-                 "57"
+                 "64",
+                 "59",
+                 "58"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "82",
-                 "67"
+                 "93",
+                 "84",
+                 "69"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 03:05:04 2018</p>
+         Last Run: Sun Oct 28 04:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -231,9 +231,9 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>9</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>10</td>
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
@@ -243,13 +243,13 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-1</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>9</td>
                         <td>75</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>87</td>
                      </tr>
                      <tr>
@@ -258,7 +258,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
@@ -306,8 +306,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "-3",
                  "-2",
-                 "-1",
                  "0"
                ]
              },
@@ -317,8 +317,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "0",
                  "1",
-                 "2",
                  "3"
                ]
              }
@@ -370,7 +370,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
+                 "10",
                  "9",
                  "8"
                ]
@@ -382,7 +382,7 @@
                "data":[
                  "83",
                  "75",
-                 "66"
+                 "67"
                ]
              },
              {
