--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 04:05:23 2018</p>
+         Last Run: Sun Oct 28 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>16</td>
+                        <td>23</td>
                         <td>64</td>
                         <td>0</td>
                         <td>11</td>
@@ -45,7 +45,7 @@
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>17</td>
+                        <td>20</td>
                         <td>59</td>
                         <td>1</td>
                         <td>14</td>
@@ -57,12 +57,12 @@
                         <td>Mostly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>14</td>
-                        <td>58</td>
+                        <td>16</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>69</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "17",
-                 "14"
+                 "23",
+                 "20",
+                 "16"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "data":[
                  "64",
                  "59",
-                 "58"
+                 "59"
                ]
              },
              {
@@ -192,7 +192,7 @@
                "data":[
                  "93",
                  "84",
-                 "69"
+                 "71"
                ]
              }
            ]
@@ -204,12 +204,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 04:05:23 2018</p>
+         Last Run: Sun Oct 28 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -234,7 +235,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>10</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -243,8 +244,8 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>9</td>
                         <td>75</td>
                         <td>0</td>
@@ -307,7 +308,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-2",
+                 "-1",
                  "0"
                ]
              },
@@ -318,7 +319,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "1",
+                 "2",
                  "3"
                ]
              }
@@ -380,7 +381,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
+                 "84",
                  "75",
                  "67"
                ]
