--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 07:05:03 2018</p>
+         Last Run: Sun Oct 28 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -31,34 +31,34 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Overcast</td>
-                        <td>3</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>24</td>
+                        <td>48</td>
                         <td>0</td>
-                        <td>20</td>
-                        <td>58</td>
-                        <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSE</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
+                        <td>7</td>
                         <td>4</td>
-                        <td>1</td>
-                        <td>21</td>
-                        <td>59</td>
+                        <td>30</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>84</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>15</td>
-                        <td>57</td>
+                        <td>6</td>
+                        <td>3</td>
+                        <td>20</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SSE</td>
@@ -106,9 +106,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
-                 "1",
-                 "2"
+                 "2",
+                 "4",
+                 "3"
                ]
              },
              {
@@ -117,9 +117,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
-                 "4",
-                 "5"
+                 "5",
+                 "7",
+                 "6"
                ]
              }
            ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "20",
-                 "21",
-                 "15"
+                 "24",
+                 "30",
+                 "20"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "59",
-                 "57"
+                 "48",
+                 "46",
+                 "52"
                ]
              },
              {
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "84",
+                 "93",
+                 "79",
                  "71"
                ]
              }
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 07:05:03 2018</p>
+         Last Run: Sun Oct 28 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -234,7 +234,7 @@
                         <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>10</td>
+                        <td>7</td>
                         <td>86</td>
                         <td>0</td>
                         <td>8</td>
@@ -246,10 +246,10 @@
                         <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>9</td>
-                        <td>80</td>
+                        <td>7</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
                         <td>92</td>
                      </tr>
@@ -258,7 +258,7 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>18</td>
+                        <td>17</td>
                         <td>74</td>
                         <td>0</td>
                         <td>10</td>
@@ -371,9 +371,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "9",
-                 "18"
+                 "7",
+                 "7",
+                 "17"
                ]
              },
              {
@@ -382,7 +382,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "86",
-                 "80",
+                 "81",
                  "74"
                ]
              },
